// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component | ChapterCard.vue template should match snapshot 1`] = `
<div class="chapter-card">
  <article class="chapter">
    <header class="chapter__header">
      <h2 class="chapter__title">
        My title
      </h2>
      <p class="chapter__position">
        82
      </p>
    </header>
    <div class="chapter__content"><img src="webf" alt="altComplementTitle of the first paragraph" rel="noreferrer" class="chapter__image"></div>
    <footer class="chapter__footer">
      <div class="chapter__footer_text">
        <p>
          Title of the first paragraph
        </p>
      </div>
      <div class="chapter__footer_text"><a href="https://github.com/trollepierre" target="_blank">
          https://github.com/trollepierre
        </a></div>
      <div class="chapter__footer_text">
        <p>
          url
        </p>
      </div>
      <div class="chapter__footer_text"><iframe width="512" height="288" data-explanation="to-remove?" src="https://www.youtube.com/embed/-18AYp_7iW0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" class="youtube-iframe"></iframe></div>
    </footer>
  </article>
</div>
`;

exports[`Component | ChapterCard.vue template should match snapshot when imgLink is not set 1`] = `
<div class="chapter-card">
  <article class="chapter">
    <header class="chapter__header">
      <h2 class="chapter__title">
        My title
      </h2>
      <p class="chapter__position">
        82
      </p>
    </header>
    <div class="chapter__content"><span>
        missingImage
      </span></div>
    <footer class="chapter__footer">
      <div class="chapter__footer_text">
        <p>
          Title of the first paragraph
        </p>
      </div>
      <div class="chapter__footer_text"><a href="https://github.com/trollepierre" target="_blank">
          https://github.com/trollepierre
        </a></div>
      <div class="chapter__footer_text">
        <p>
          url
        </p>
      </div>
      <div class="chapter__footer_text"><iframe width="512" height="288" data-explanation="to-remove?" src="https://www.youtube.com/embed/-18AYp_7iW0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" class="youtube-iframe"></iframe></div>
    </footer>
  </article>
</div>
`;
